# micromodel

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  bootstrap  configure.ac  defaultmap.tiff
check/: .cvsignore  Makefile.am  mml_check.c  pantin_check.c
include/: Makefile.am
include/libmicromodel/: Makefile.am  basis.h  color.h  edge.h  facet.h  grid.h  mcommander.h  mml2bin.h  vertex.h
lib/: .cvsignore  Makefile.am  basis.c  bevel.c  color.c  connect.c  convert.c  edge.c  extrude.c  facet.c  grid.c  grid.h  gridsel.c  gridsel.h  mapping.c  mcommander.c  mirror.c  mml2bin.c  platon.c  rules.c  rules.h  separate.c  smooth.c  vertex.c
